style changes, fix resuming when clicking icon

--- a/popup.html
+++ b/popup.html
@@ -16,9 +16,9 @@
 				<div class="button-container" id="mode-buttons">
 					<button data-mode="pomodoro" id="pomodoro-btn">Pomodoro</button>
 					<button data-mode="shortBreak" id="short-break-btn">
-						Short Break
+						Short&nbsp;&nbsp;Break
 					</button>
-					<button data-mode="longBreak" id="long-break-btn">Long Break</button>
+					<button data-mode="longBreak" id="long-break-btn">Long&nbsp;&nbsp;Break</button>
 				</div>
 				<div class="clock">
 					<span id="js-minutes">25</span><span>:</span
