added mama's encouragement

--- a/popup.html
+++ b/popup.html
@@ -32,6 +32,9 @@
 			<audio src="assets/backtowork.mp3" data-sound="pomodoro"></audio>
 			<audio src="assets/break.mp3" data-sound="shortBreak"></audio>
 			<audio src="assets/break.mp3" data-sound="longBreak"></audio>
+			<audio src="assets/great.mp3" extra-sound="great"></audio>
+			<audio src="assets/terrific.mp3" extra-sound="terrific"></audio>
+			<audio src="assets/wedidit.mp3" extra-sound="wedidit"></audio>
 		</div>
 		<script src="script.js"></script>
 	</body>
