changed logo, removed progress

--- a/popup.html
+++ b/popup.html
@@ -9,9 +9,7 @@
 	</head>
 	<body>
 		<main class="app">
-			<div class="title">Cooking Clock</div>
-			<progress id="js-progress" value="0"></progress>
-			<div class="progress-bar"></div>
+			<img src="assets/logo.png" class="title"/>
 			<div class="container">
 				<div class="button-container" id="mode-buttons">
 					<button data-mode="pomodoro" id="pomodoro-btn">Pomodoro</button>
