--- a/popup.html
+++ b/popup.html
@@ -10,15 +10,15 @@
 	<body>
 		<main class="app">
 			<div class="title">Cooking Clock</div>
-			<progress id="js-progress" value="0"></progress>
-			<div class="progress-bar"></div>
 			<div class="container">
 				<div class="button-container" id="mode-buttons">
 					<button data-mode="pomodoro" id="pomodoro-btn">Pomodoro</button>
 					<button data-mode="shortBreak" id="short-break-btn">
 						Short&nbsp;&nbsp;Break
 					</button>
-					<button data-mode="longBreak" id="long-break-btn">Long&nbsp;&nbsp;Break</button>
+					<button data-mode="longBreak" id="long-break-btn">
+						Long&nbsp;&nbsp;Break
+					</button>
 				</div>
 				<div class="clock">
 					<span id="js-minutes">25</span><span>:</span
