fix negative time bug, changing mode bug, added back audios, cookodoro...

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,6 @@
 	</head>
 	<body>
 		<main class="app">
-			<div class="title">Cooking Clock</div>
 			<img src="assets/logo.png" class="title" />
 			<div class="container">
 				<div class="button-container" id="mode-buttons">
@@ -30,9 +29,7 @@
 			<img class="mama" src="assets/mama.png" />
 		</main>
 		<div class="hidden">
-			<audio src="assets/backtowork.mp3" data-sound="pomodoro"></audio>
-			<audio src="assets/break.mp3" data-sound="shortBreak"></audio>
-			<audio src="assets/break.mp3" data-sound="longBreak"></audio>
+			<audio src="assets/backtowork.mp3" data-sound="break"></audio>
 			<audio src="assets/great.mp3" extra-sound="great"></audio>
 			<audio src="assets/terrific.mp3" extra-sound="terrific"></audio>
 			<audio src="assets/wedidit.mp3" extra-sound="wedidit"></audio>
